Change of headline
This is an explanation regarding the user-sensitive (teacher, admin, student) registration. A form will be sent over through email in the further steps to proceed with the application details.

--- a/signup.html
+++ b/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Signup</title>
+    <title>Signup here</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/light.min.css">
     <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js" defer></script>
