Updated the background for signup

--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,8 @@
     <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js" defer></script>
     <script src="/js/validation.js" defer></script>
 </head>
-<body>
+<body style = "background-color: antiquewhite ;background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRahFZxE1b5hOcrKDZQI-u3FQQi5FYG-wrNFg&usqp=CAU);background-repeat: no-repeat; background-position: center center;">
+
     
     <h1>Signup</h1>
     
