Updated sign up text

--- a/signup.html
+++ b/signup.html
@@ -11,6 +11,7 @@
 
     
     <h1>Signup</h1>
+    <h3>Please sign up here and you will receive a follow up email to proceed further with your account.</h3>
     
     <form action="process-signup.php" method="post" id="signup" novalidate>
         <div>
