Update of sign up

--- a/signup-success.html
+++ b/signup-success.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/light.min.css">
 </head>
-<body>
+<body style="background-color: greenyellow;">
     
     <h1>Signup</h1>
     
